# ff_rithmic_api

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  rithmic_credentials.toml  rithmic_credentials_example.toml  servers.toml
src/: api_client.rs  broadcaster.rs  credentials.rs  errors.rs  examples.rs  lib.rs  map.rs  servers.rs  systems.rs  test.rs
