[package]
name = "ff_rithmic_api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
toml = "*"
dashmap ="*"
prost ="*"
prost-build = "0.13.2"
tokio-tungstenite = { version = "0.23.1", features = ["stream", "native-tls"] }
futures-util = "0.3.30"
tokio =  { version = "*", features = ["full"] }
thiserror = "*"
tungstenite = "0.23.0"