[package]
name = "ff_rithmic_api"
version = "0.2.1"
edition = "2021"
license = "MIT"
authors = ["Kevin Monaghan <BurnOutTrader@Outlook.com>"]
description = "Rithmic api for easy connection to rithmic RProtocol servers"
repository = "https://github.com/BurnOutTrader/ff_rithmic_api"
keywords = ["rithmic", "rust", "crate", "api"]
categories = ["api-bindings"]
readme = "README.md"

exclude = [
    "rithmic_credentials_example.toml",  # Exclude all TOML files in this directory
    ".gitignore",
    "LICENSE.md",
    ".github/",
    "src/test.rs",
    "build.rs",
    "servers.toml"
]

[dependencies]
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
dashmap ="6.1.0"
prost ="0.13.3"
prost-build = "0.13.2"
futures-util = "0.3.30"
tokio =  { version = "1.40.0", features = ["full"] }
thiserror = "1.0.63"
tungstenite = "0.23.0"
tokio-tungstenite = { version = "0.23.1", features = ["stream", "native-tls"] }
rkyv = { version =  "0.7.44", features = ["std", "alloc", "validation"] }
strum_macros = "0.26.4"